--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,13 @@
   "parserOptions": {
     "project": "./tsconfig.json"
   },
+  "rules": {
+    "@typescript-eslint/lines-between-class-members": [
+      "error",
+      "always",
+      { "exceptAfterSingleLine": true }
+    ]
+  },
   
   
   "overrides": [
