--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -9,5 +9,9 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "date-fns": "^2.30.0",
+    "esserializer": "^1.3.11"
+  }
 }
