--- a/packages/solid-project/package.json
+++ b/packages/solid-project/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@todo-mono/shared": "workspace:^",
+    "date-fns": "^2.30.0",
     "solid-js": "^1.8.7"
   },
   "devDependencies": {
