[chore] react 프로젝트 린팅 규칙 적용 등
1. 린팅 규칙 적용
2. 패키지 의존성 추가
3. 프로젝트 문서 추가
4. head 태그 내 메타데이터 수정(title)

--- a/packages/react-project/package.json
+++ b/packages/react-project/package.json
@@ -10,11 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@todo-mono/shared": "workspace:^",
+    "date-fns": "^2.30.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@todo-mono/shared": "workspace:^",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
