[chore] svelte 프로젝트 패키지 및 설정 파일 작업
1. package.json - 패키지 빌드 명령어 추가
2. src/lib/index.ts - 패키지 진입점 추가
3. tsconfig.json - include 항목에 index.ts추가
4. 린터 적용

--- a/packages/svelte-project/package.json
+++ b/packages/svelte-project/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "svelte-project",
+  "name": "@todo-mono/svelte-project",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "package": "svelte-package",
     "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
@@ -21,7 +21,17 @@
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
   },
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+			"svelte": "./dist/index.js"
+		}
+	},
   "dependencies": {
+    "@sveltejs/package": "^2.2.5",
     "@todo-mono/shared": "workspace:^"
-  }
+  },
+  "peerDependencies": {
+		"svelte": "^4.0.0"
+	}
 }
