--- a/packages/svelte-project/tsconfig.json
+++ b/packages/svelte-project/tsconfig.json
@@ -16,6 +16,6 @@
     "checkJs": true,
     "isolatedModules": true
   },
-  "include": ["src/**/*.ts", "src/**/*.js", "src/**/*.svelte"],
+  "include": ["src/**/*.ts", "src/**/*.js", "src/**/*.svelte", "index.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
