[chore] solid 프로젝트 패키지 및 주석 작업
1. package.json - 패키지 이름 수정
2. tsconfig.json - index.ts 포함
3. index.ts - 패키지 진입 컴포넌트 추가
4. src/stores/TodoStores - 부정확한 주석 삭제 후 보다 정확한 내용으로 대체

--- a/packages/solid-project/package.json
+++ b/packages/solid-project/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "solid-project",
+  "name": "@todo-mono/solid-project",
   "private": true,
   "version": "0.0.0",
   "type": "module",
