--- a/packages/preact-project/package.json
+++ b/packages/preact-project/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "preact-project",
+  "name": "@todo-mono/preact-project",
   "private": true,
   "version": "0.0.0",
   "type": "module",
