--- a/packages/lit-project/package.json
+++ b/packages/lit-project/package.json
@@ -1,21 +1,23 @@
 {
-  "name": "lit-project",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "name": "@todo-mono/lit-project",
+  "version": "1.0.1",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@lit/context": "^1.1.0",
-    "@todo-mono/shared": "workspace:^",
-    "date-fns": "^2.30.0",
-    "lit": "^3.1.0"
+    "dev": "vite dev",
+    "build": "vite build",
+    "lint": "eslint src --fix"
   },
   "devDependencies": {
-    "typescript": "^5.2.2",
-    "vite": "^5.0.8"
+    "autoprefixer": "^10.4.12",
+    "postcss": "^8.4.18",
+    "sass": "^1.55.0",
+    "tailwindcss": "^3.2.0",
+    "typescript": "^5.3.3", 
+    "vite": "^5.0.10"
+  },
+  "dependencies": {
+    "@todo-mono/shared": "workspace:^",
+    "@lit/context": "^1.1.0",
+    "lit": "^3.1.0",
+    "date-fns": "^2.30.0"
   }
 }
