--- a/package.json
+++ b/package.json
@@ -14,12 +14,17 @@
     "@babel/eslint-parser": "^7.23.3",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
+    "date-fns": "^2.30.0",
     "eslint": "^8.55.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-solid": "^0.13.0",
+    "eslint-plugin-svelte": "^2.35.1",
     "eslint-plugin-vue": "^9.19.2",
+    "eslint-plugin-lit": "^1.11.0",
+    "eslint-plugin-qwik": "^1.3.1",
     "esserializer": "^1.3.11",
-    "date-fns": "^2.30.0",
     "prettier": "^3.1.1",
     "vue-eslint-parser": "^9.3.2"
   }
